@@ -58,7 +58,7 @@ endif()
 
 find_file(MRMathCPP_PATH "MRMathCPPLib.cmake" PATHS "MRMathCPP/build"  "../MRMathCPP/build")
 if(NOT MRMathCPP_PATH STREQUAL "MRMathCPP_PATH-NOTFOUND")
-  message(STATUS "MRMathCPP Found at ${MRMathCPP_PATH}")
+  message(STATUS "Found MRMathCPP: ${MRMathCPP_PATH}")
   include("${MRMathCPP_PATH}")
 else()
   message(FATAL_ERROR " MRMathCPP Search Failed!\n"
@@ -67,6 +67,36 @@ else()
                       "     build directory.\n")
 endif()
 get_target_property(MRMathCPP_INCLUDE MRMathCPP INTERFACE_INCLUDE_DIRECTORIES)
+
+######################################################################################################################################################
+# Create interface target for the entire project
+
+set(MRASTER_INCLUDES "lib/MRcolor.hpp" 
+                     "lib/MRcolorTpl.hpp"
+                     "lib/hersheyFont.hpp"
+                     "lib/MRpoint2d.hpp"
+                     "lib/ramCanvas.hpp"
+                     "lib/ramCanvasTpl.hpp")
+add_library(MRaster INTERFACE ${MRASTER_INCLUDES})
+
+
+target_include_directories(MRaster INTERFACE ${MRMathCPP_INCLUDE})
+if(TIFF_FOUND)
+  target_compile_definitions(MRaster INTERFACE MRASTER_FOUND_TIFF=1)
+  target_include_directories(MRaster INTERFACE ${TIFF_INCLUDE_DIRS})
+  target_link_libraries(MRaster INTERFACE ${TIFF_LIBRARIES})
+endif()
+target_include_directories(MRaster INTERFACE "${PROJECT_SOURCE_DIR}/lib")
+
+######################################################################################################################################################
+# Export the library interface cmake file
+
+export(TARGETS MRaster FILE "${CMAKE_BINARY_DIR}/MRasterLib.cmake")
+
+######################################################################################################################################################
+# Create variable for project includes
+get_target_property(MRaster_INCLUDE MRaster INTERFACE_INCLUDE_DIRECTORIES)
+message(STATUS "Combined Project Includes: ${MRaster_INCLUDE}")
 
 ######################################################################################################################################################
 
@@ -157,9 +187,7 @@ endif()
 # Add a target for each example we can build
 foreach(CURTGT IN LISTS EXAMPLE_TARGETS)
   add_executable(${CURTGT} EXCLUDE_FROM_ALL "examples/${CURTGT}.cpp")
-  target_include_directories(${CURTGT} AFTER PRIVATE lib)
   target_compile_features(${CURTGT} PUBLIC cxx_std_20)
-  target_include_directories(${CURTGT} BEFORE PRIVATE ${CMAKE_BINARY_DIR})
 
   IF(O_128_INT)
     target_compile_options(${CURTGT} PUBLIC "-DMRASTER_OPT_128_INT=1")
@@ -191,7 +219,7 @@ foreach(CURTGT IN LISTS EXAMPLE_TARGETS)
     #message("Warning: MSVC support is currently experimental")
   endif()
 
-  target_include_directories(${CURTGT} PRIVATE ${MRMathCPP_INCLUDE})
+  target_include_directories(${CURTGT} PRIVATE ${MRaster_INCLUDE})
 
   # Add build requirements for examples using Boost Test
   list (FIND TARGETS_REQ_BTEST ${CURTGT} TMPR)
@@ -291,27 +319,3 @@ else()
   message(STATUS "Warning: Doxygen not found.  No documentation targets!")
 endif()
 
-######################################################################################################################################################
-# Create interface target for the entire project
-
-set(MRASTER_INCLUDES "lib/MRcolor.hpp" 
-                     "lib/MRcolorTpl.hpp"
-                     "lib/hersheyFont.hpp"
-                     "lib/MRpoint2d.hpp"
-                     "lib/ramCanvas.hpp"
-                     "lib/ramCanvasTpl.hpp")
-add_library(MRaster INTERFACE ${MRASTER_INCLUDES})
-
-
-target_include_directories(MRaster INTERFACE ${MRMathCPP_INCLUDE})
-if(TIFF_FOUND)
-  target_compile_definitions(MRaster INTERFACE MRASTER_FOUND_TIFF=1)
-  target_include_directories(MRaster INTERFACE ${TIFF_INCLUDE_DIRS})
-  target_link_libraries(MRaster INTERFACE ${TIFF_LIBRARIES})
-endif()
-target_include_directories(MRaster INTERFACE "${PROJECT_SOURCE_DIR}/lib")
-
-######################################################################################################################################################
-# Export the library interface cmake file
-
-export(TARGETS MRaster FILE "${CMAKE_BINARY_DIR}/MRasterLib.cmake")
