@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2024-10-31 Thu 15:51 -->
+<!-- 2025-01-23 Thu 23:48 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=1024, initial-scale=1" />
 <title>Change Log</title>
@@ -230,17 +230,17 @@
 
 <tr>
 <td class="org-right"><b>Updated:</b></td>
-<td class="org-left"><i>2024-10-31 15:51:44</i></td>
+<td class="org-left"><i>2025-01-23 23:48:12</i></td>
 </tr>
 
 <tr>
 <td class="org-right"><b>Generated:</b></td>
-<td class="org-left"><i>2024-10-31 15:51:46</i></td>
+<td class="org-left"><i>2025-01-23 23:48:15</i></td>
 </tr>
 </tbody>
 </table>
 <p align="center">
-Copyright &copy; 2024 Mitch Richling. All rights reserved.
+Copyright &copy; 2025 Mitch Richling. All rights reserved.
 </p>
 
 <div id="table-of-contents" role="doc-toc">
@@ -375,7 +375,11 @@ Copyright &copy; 2024 Mitch Richling. All rights reserved.
 </ul></li>
 <li>Miscellaneous
 <ul class="org-ul">
-<li>N/A</li>
+<li>Streamlined CMake configuration
+<ul class="org-ul">
+<li>Just export cmake file and not a package</li>
+<li>Use exported config for builds</li>
+</ul></li>
 </ul></li>
 </ul>
 </div>
