@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2024-10-31 Thu 13:38 -->
+<!-- 2025-01-23 Thu 23:49 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=1024, initial-scale=1" />
 <title>MRaster</title>
@@ -222,7 +222,7 @@
 </colgroup>
 <tbody>
 <tr>
-<td class="org-left">Copyright &copy; 2024 Mitch Richling. All rights reserved.</td>
+<td class="org-left">Copyright &copy; 2025 Mitch Richling. All rights reserved.</td>
 </tr>
 </tbody>
 </table>
@@ -233,8 +233,9 @@
 <ul>
 <li><a href="#introduction">1. Introduction</a>
 <ul>
-<li><a href="#org10dc8b8">1.1. Introduction</a></li>
-<li><a href="#org2175d0b">1.2. Versions</a></li>
+<li><a href="#org242edbc">1.1. Introduction</a></li>
+<li><a href="#orgdf907f8">1.2. Getting Started</a></li>
+<li><a href="#org7d682b5">1.3. Versions</a></li>
 </ul>
 </li>
 <li><a href="#goals">2. Design goals</a></li>
@@ -253,8 +254,8 @@ From the README:
 </p>
 <hr />
 </div>
-<div id="outline-container-org10dc8b8" class="outline-3">
-<h3 id="org10dc8b8"><span class="section-number-3">1.1.</span> Introduction</h3>
+<div id="outline-container-org242edbc" class="outline-3">
+<h3 id="org242edbc"><span class="section-number-3">1.1.</span> Introduction</h3>
 <div class="outline-text-3" id="text-1-1">
 <p>
 <b>MRaster</b> is a very simple C++ library for generating raster images &#x2013;
@@ -324,9 +325,44 @@ The code: <a href="https://github.com/richmit/mraster/">https://github.com/richm
 </div>
 </div>
 
-<div id="outline-container-org2175d0b" class="outline-3">
-<h3 id="org2175d0b"><span class="section-number-3">1.2.</span> Versions</h3>
+<div id="outline-container-orgdf907f8" class="outline-3">
+<h3 id="orgdf907f8"><span class="section-number-3">1.2.</span> Getting Started</h3>
 <div class="outline-text-3" id="text-1-2">
+<p>
+For more detail read the <a href="https://richmit.github.io/mraster/QuickStart.html">quick start guide</a>!
+</p>
+
+<p>
+To use this code, <b>TWO</b> repositories must be cloned &#x2013; this one and a
+basic mathematical library.  The mathematical library should then be
+configured.  Finally you can build the examples in this repository.
+This all might be done on the command line on linux or MacOS (for windows, see the
+<a href="https://richmit.github.io/mraster/QuickStart.html">quick start guide</a>) 
+a sequence of commands like the following:
+</p>
+
+<div class="org-src-container">
+<pre class="src src-sh">git clone <span style="color: #fa8072;">'https://github.com/richmit/MRMathCPP.git'</span>    <span style="color: #ffa500;"># </span><span style="color: #ff7f24;">Download MRMathCPP</span>
+<span style="color: #b0c4de;">cd</span> MRMathCPP                                            <span style="color: #ffa500;"># </span><span style="color: #ff7f24;">Change directory to the MRMathCPP git repo</span>
+mkdir build                                             <span style="color: #ffa500;"># </span><span style="color: #ff7f24;">Create a 'build' directory</span>
+<span style="color: #b0c4de;">cd</span> build                                                <span style="color: #ffa500;"># </span><span style="color: #ff7f24;">Change directory to the build directory</span>
+cmake ..                                                <span style="color: #ffa500;"># </span><span style="color: #ff7f24;">Configure the build system with cmake</span>
+cmake --build . -t install                              <span style="color: #ffa500;"># </span><span style="color: #ff7f24;">Install the package in the build directory</span>
+<span style="color: #b0c4de;">cd</span> ../..                                                <span style="color: #ffa500;"># </span><span style="color: #ff7f24;">Change directory back to where we started</span>
+git clone <span style="color: #fa8072;">'https://github.com/richmit/mraster.git'</span>      <span style="color: #ffa500;"># </span><span style="color: #ff7f24;">Download MRaster</span>
+<span style="color: #b0c4de;">cd</span> mraster                                              <span style="color: #ffa500;"># </span><span style="color: #ff7f24;">Change directory to the mraster git repo</span>
+mkdir build                                             <span style="color: #ffa500;"># </span><span style="color: #ff7f24;">Create a 'build' directory</span>
+<span style="color: #b0c4de;">cd</span> build                                                <span style="color: #ffa500;"># </span><span style="color: #ff7f24;">Change directory to the build directory</span>
+cmake ..                                                <span style="color: #ffa500;"># </span><span style="color: #ff7f24;">Configure the build system with cmake</span>
+cmake --build . -t examples                             <span style="color: #ffa500;"># </span><span style="color: #ff7f24;">Build all the examples</span>
+</pre>
+</div>
+</div>
+</div>
+
+<div id="outline-container-org7d682b5" class="outline-3">
+<h3 id="org7d682b5"><span class="section-number-3">1.3.</span> Versions</h3>
+<div class="outline-text-3" id="text-1-3">
 <p>
 This library has defined "releases" intended to identify a stable
 snapshot of the code &#x2013; they are tagged in git with a tag name
@@ -345,6 +381,12 @@ The <a href="https://richmit.github.io/mraster/changelog.html">change log</a>
 has entries for each release as well as a section for what has changed
 on <code>HEAD</code> since the last release.
 </p>
+
+
+<div id="org3641a06" class="figure">
+<p><a href="pics/gallery/apollonian_gasket_2D_01_250.jpg"><img src="pics/gallery/apollonian_gasket_2D_01_250.jpg" alt="apollonian_gasket_2D_01_250.jpg" /></a>
+</p>
+</div>
 <hr />
 </div>
 </div>
